@@ -4,7 +4,7 @@
 \title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all
 \newcommand{\CRANpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{Changes in version 0.999-17 (2017-06-13, svn r1650)}{
+\section{Changes in version 0.999-17 (2017-06-13, svn r1658)}{
   \subsection{New Features}{
     \itemize{
       \item \code{C.n()} and several tests now get an optional
@@ -21,6 +21,11 @@
 
       \item \code{dCopula(u, copula, *)} now signals an error if
       \code{ncol(u)} and \code{dim(copula)} differ.
+
+      \item \code{corKendall()} now checks for \code{NA}'s by default
+      and then works pairwisely.  It is now documented and exported.
+      As a consequence, \code{etau(U, *)} now also works in the case
+      \code{U} has missing values.
     }
   }
   \subsection{Bug Fixes}{
